--- a/shop/shop-item/shop-item-interface/pom.xml
+++ b/shop/shop-item/shop-item-interface/pom.xml
@@ -12,4 +12,11 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>shop-item-interface</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
 </project>
