--- a/shop/shop-item/shop-item-service/src/main/resources/application.yml
+++ b/shop/shop-item/shop-item-service/src/main/resources/application.yml
@@ -8,5 +8,5 @@ eureka:
     service-url:
       defaultZone: http://127.0.0.1:8091/eureka
   instance:
-    lease-renewal-interval-in-seconds: 5
-    lease-expiration-duration-in-seconds: 15
+    lease-renewal-interval-in-seconds: 5     # 心跳时间
+    lease-expiration-duration-in-seconds: 15 # 过期时间
