--- a/shop/shop-item/shop-item-service/src/main/resources/application.yml
+++ b/shop/shop-item/shop-item-service/src/main/resources/application.yml
@@ -3,6 +3,16 @@ server:
 spring:
   application:
     name: item-service
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:file:./h2/database
+    platform: h2
+    username: admin
+    password: admin
+  h2:
+    console:
+      path: /h2
+      enabled: true
 eureka:
   client:
     service-url:
