--- a/shop-admin/package.json
+++ b/shop-admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shop",
+  "name": "shop-admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
