新增添加品牌接口

--- a/shop/pom.xml
+++ b/shop/pom.xml
@@ -16,6 +16,8 @@
         <module>shop-common</module>
         <module>shop-gateway</module>
         <module>shop-item</module>
+        <module>upload</module>
+        <module>shop-upload</module>
     </modules>
 
     <parent>
