--- a/shop/shop-upload/pom.xml
+++ b/shop/shop-upload/pom.xml
@@ -28,5 +28,11 @@
             <artifactId>shop-item-interface</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.shop.common</groupId>
+            <artifactId>shop-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
